client/src/App.css
/* ... */
.weatherCardCtn {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 95%;
  padding: 1rem 0 2rem 0;
  position: relative;
}

.dailyWeatherCtn {
  width: 65%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.location {
  display: flex;
  align-items: center;
  padding-bottom: 1rem;
  text-transform: uppercase;
  letter-spacing: 0.05rem;
}

.location h2 {
  font-size: 1.75rem;
  font-weight: 500;
  text-decoration: underline gray dashed;
  text-underline-offset: 8px;
  text-decoration-thickness: 4px;
}

.location i {
  color: var(--secGrey);
  font-size: 2.25rem;
  margin-right: 0.5rem;
}

.ctn1 {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 67.5%;
  border-radius: 1rem;
}

.dailyMainInfo {
  display: flex;
  width: 78%;
  height: 100%;
  background-color: var(--terBlue);
  border-radius: 1rem;
}

.mainWeatherText {
  width: 50%;
  padding: 1.5rem 0 1.5rem 1.5rem;
}

.date {
  font-size: 1.5rem;
  font-weight: 500;
}

.mainWeatherText h3 {
  font-weight: 600;
  color: var(--priBlue);
  text-transform: uppercase;
  letter-spacing: 0.05rem;
  font-size: 2.5rem;
}

.temps {
  display: flex;
  align-items: center;
  padding: 0.6rem 0;
}

.mainTemp {
  font-size: 4rem;
  font-weight: 700;
  margin-right: 1rem;
}

.HLtemp {
  color: var(--priBlue);
  font-weight: 500;
}

.HLtemp p {
  font-size: 1rem;
}

.feelsLikeTemp {
  font-weight: 500;
  color: var(--priBlue);
}

.imgMainCtn {
  width: 50%;
  height: 100%;
  text-align: center;
  padding: 3rem 2rem 0 0;
}

.tempToggleCtn {
  background-color: var(--priBlue);
  width: 5.35rem;
  padding: 0.6rem 1rem;
  border-radius: 12rem;
  position: absolute;
  z-index: 1000;
  top: 6%;
  left: 41.5%;
  display: flex;
  justify-content: space-between;
  font-weight: 700;
  cursor: pointer;
  box-shadow: 0 0 10px rgba(51, 51, 51, 0.35);
}

.toggle {
  height: 2rem;
  width: 2rem;
  border-radius: 50%;
  background-color: var(--terBlue);
  position: absolute;
  top: 12%;
  right: 10%;
  transition: all 0.5s ease-in;
}

.imgCtn {
  height: 70%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 2rem;
}

.imgCtn img {
  width: 100%;
}

.weatherDescription {
  font-weight: 500;
  font-size: 1.25rem;
  letter-spacing: 0.05rem;
  padding-top: 1rem;
} 

/* humidity, pressure, wind speed */

.ctn2 {
  height: 100%;
  width: 20%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  border-radius: 1rem;
  padding: 1rem;
  background-color: var(--priBlue);
  font-weight: 500;
  letter-spacing: 0.025rem;
}

.extraInfoCtn {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 31%;
  border-radius: 1rem;
  background-color: var(--terBlue);
}

.extraInfoType {
  color: var(--priBlue);
}

.extraInfoCtn p {
  font-size: 0.8rem;
  font-weight: 500;
}

.extraInfoCtn {
  padding: 1rem;
}

.extraInfoImgCtn img {
  width: 100%;
}

/* sun info */

.ctn3 {
  display: flex;
  justify-content: space-between;
  height: 30%;
  border-radius: 1rem;
  padding: 1rem;
  background-color: var(--priBlue);
}

.sunInfoCtn {
  width: 32%;
  border-radius: 1rem;
  background-color: var(--terBlue);
  text-align: center;
  padding: 0.75rem 0;;
  font-weight: 500;
}

.sunImgCtn {
  height: 75%;
}

.sunImgCtn img {
  height: 100%;
  padding-bottom: 0.75rem;
  padding-top: 0.25rem;
}

.dayLengthCtn {
  height: 80%;
}

.dayLengthCtn img {
  height: 110%;
}

.dayLength {
  padding-left: 0.5rem;
  font-size: 0.9rem;
  font-weight: 600;
}

.lightText {
  color: var(--priBlue);
}

/* forecast weather */

.forecastWeatherCtn {
  background: linear-gradient(45deg, var(--priBlue), var(--terBlue));
  border-radius: 1rem;
  margin-left: 1rem;
  padding: 1.5rem;
  width: 35%;
}

.forecastWeatherCtn ul {
  height: 93%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.forecastDayCtn {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--terBlue);
  border-radius: 1rem;
  padding: 1.5rem;
  height: 19%;
}

.forecastImgCtn {
  width: 30%;
  display: flex;
  justify-content: center;
}

.forecastImgCtn img {
  width: 90%;
}

.forecastTemp {
  font-size: 2rem;
  font-weight: 700;
}

.forecastWeatherCtn h2 {
  height: 7%;
  font-weight: normal;
  font-size: 1.15rem;
  text-transform: uppercase;
  text-align: center;
}

.temp {
  font-size: 1.25rem;
  font-weight: 700;
}

span {
  color: var(--priBlue);
  font-weight: normal;
}

.forecastTempInfo {
  display: flex;
  flex-direction: column;
  line-height: 2rem;
}

